Used try catch to check for exceptions.